@@ -1,3 +1,8 @@
+2015-10-23  Natalia Portillo  <claunia@claunia.com>
+
+	* Enums.cs:
+	  Added information from ECMA-111.
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* Device/Variables.cs:
